Disabled opcache in php overrides
Shopware development environment improvements:
* Disabled opcode cache by default.
* Increased the innodb lock timeout to prevent "Lock wait timeout exceeded" errors.

--- a/docker/phpdockerio-apache/php-ini-overrides.ini
+++ b/docker/phpdockerio-apache/php-ini-overrides.ini
@@ -3,4 +3,5 @@ post_max_size = 108M
 date.timezone = "Europe/Berlin"
 memory_limit = 16000M
 max_execution_time = 300
-
+innodb_lock_wait_timeout=5000
+opcache.enable = 0
